# dbs-cli

./: .gitignore  .gitmodules  Cargo.toml  bpf.qemu  log.txt  test.bt  终端输出.txt
dbs_test/: Readme  patch1  test_sev.sh  test_tdx.sh
sev_test/: qemu.sh  test.sh  test_pre_attestatoin.sh
src/: cli_instance.rs  vmm_comm_trait.rs
src/parser/: args.rs
