[package]
name = "dbs-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10" }
dragonball = { path = "/home/fuu/23Q3/kata-containers-sev/src/dragonball", features = ["virtio-blk", "virtio-vsock", "hotplug", "dbs-upcall", "sev"] }
sev = { version = "1.2", features = ["openssl"] }
# dragonball = { path = './kata-containers/src/dragonball', features = ["userspace-ioapic", "virtio-blk", "virtio-vsock", "hotplug", "dbs-upcall", "tdx"] }
clap = { version = "4.0.27", features = ["derive"] }
serde = "1.0.27"
serde_derive = "1.0.27"
libc = "0.2.39"
seccompiler = "0.2.0"
log = "0.4.14"
kvm-bindings = "0.6.0"
kvm-ioctls = "0.12.0"
thiserror = "1"
nix = "0.24.1"
anyhow = "1.0.61"
vmm-sys-util = "0.11.0"
slog = "2.7.0"
slog-term = "2.9.0"
slog-json = "2.6.1"
slog-scope = "4.4.0"
serde_json = "1.0.89"
slog-stdlog = "4.1.1"

aeb = { git = "https://github.com/haosanzi/openanolis-kata-containers", branch = "sev-support-for-dragonball" }
async-std = "1.12.0"

[patch.crates-io]
sev = { path = "/home/fuu/23Q2/fuu-sev" }
